```mermaid
%%{init: {'theme': 'dark', 'themeVariables': { 'primaryColor': '#6366f1', 'secondaryColor': '#ec4899', 'tertiaryColor': '#1e1b4b'}}}%%

flowchart TB
    subgraph Players["👥 Players"]
        P1["Player 1<br/>(Host)"]
        P2["Player 2"]
        P3["Player 3"]
        P4["Player N"]
    end

    subgraph Frontend["🎨 React Frontend"]
        UI["Game UI<br/>OracleOfWit.tsx"]
        SDK["GenLayerJS<br/>SDK"]
    end

    subgraph GenLayer["⛓️ GenLayer Blockchain"]
        subgraph Contract["📜 Oracle of Wit Contract"]
            GM["Game Manager<br/>create/join/start"]
            SM["Submission Manager<br/>punchlines & bets"]
            RM["Reward Manager<br/>XP distribution"]
            LB["Leaderboard<br/>player scores"]
        end
        
        subgraph Consensus["🗳️ Optimistic Democracy"]
            V1["Validator 1<br/>LLM: GPT-4"]
            V2["Validator 2<br/>LLM: Claude"]
            V3["Validator 3<br/>LLM: LLaMA"]
            V4["Validator N<br/>LLM: Mixed"]
        end
        
        EP["Equivalence<br/>Principle"]
    end

    subgraph AITasks["🤖 AI Tasks"]
        T1["Generate<br/>Joke Prompt"]
        T2["Rank<br/>Submissions"]
    end

    P1 & P2 & P3 & P4 --> UI
    UI <--> SDK
    SDK <--> Contract
    
    GM --> T1
    SM --> T2
    
    T1 --> V1 & V2 & V3 & V4
    T2 --> V1 & V2 & V3 & V4
    
    V1 & V2 & V3 & V4 --> EP
    EP --> |"Consensus<br/>Reached"| Contract
    
    Contract --> RM
    RM --> |"XP Rewards"| P1 & P2 & P3 & P4

    style Contract fill:#6366f1,stroke:#a5b4fc
    style Consensus fill:#ec4899,stroke:#f9a8d4
    style Frontend fill:#10b981,stroke:#6ee7b7
    style AITasks fill:#f59e0b,stroke:#fcd34d
```

# Game State Flow

```mermaid
stateDiagram-v2
    [*] --> Waiting: create_game()
    
    Waiting --> Waiting: join_game()
    Waiting --> Submitting: start_game()
    
    Submitting --> Submitting: submit_punchline()
    Submitting --> Betting: start_betting_phase()
    
    Betting --> Betting: place_bet()
    Betting --> Judging: finalize_judging()
    
    Judging --> Finished: AI Consensus Reached
    
    Finished --> [*]
    
    note right of Waiting
        Host creates room
        Players join (2-10)
    end note
    
    note right of Submitting
        AI generates joke prompt
        Players write punchlines
    end note
    
    note right of Betting
        Anonymous reveals
        Players bet XP
    end note
    
    note right of Judging
        Validators rank submissions
        Consensus via Optimistic Democracy
    end note
    
    note right of Finished
        Winner announced
        XP distributed
        Leaderboard updated
    end note
```

# Equivalence Principle Flow

```mermaid
sequenceDiagram
    participant C as Contract
    participant L as Leader Validator
    participant V1 as Validator 2
    participant V2 as Validator 3
    participant V3 as Validator N
    
    C->>L: Execute rank_submissions()
    L->>L: LLM: "Rank these punchlines..."
    L-->>C: Proposed ranking: [3, 1, 2]
    
    par Validation
        C->>V1: Validate Leader's ranking
        V1->>V1: LLM: "Rank these punchlines..."
        V1-->>C: My ranking: [3, 2, 1]
        
        C->>V2: Validate Leader's ranking
        V2->>V2: LLM: "Rank these punchlines..."
        V2-->>C: My ranking: [3, 1, 2]
        
        C->>V3: Validate Leader's ranking
        V3->>V3: LLM: "Rank these punchlines..."
        V3-->>C: My ranking: [3, 2, 1]
    end
    
    Note over C,V3: Equivalence Principle Check:<br/>"Do rankings agree on #1 position?"
    
    C->>C: 4/4 agree #3 is funniest ✓
    C->>C: Consensus reached!
    C->>C: Store result: winner = #3
    C->>C: Distribute rewards
```

# XP Flow

```mermaid
flowchart LR
    subgraph Deposit["💰 Deposit Phase"]
        D1["Player deposits<br/>native tokens"]
        D2["Convert to<br/>XP balance"]
    end
    
    subgraph Betting["🎲 Betting Phase"]
        B1["Player places bet"]
        B2["XP moves to<br/>Prize Pool"]
    end
    
    subgraph Rewards["🏆 Reward Phase"]
        R1["AI determines<br/>winner"]
        R2["70% to correct<br/>predictors"]
        R3["30% to winning<br/>author"]
    end
    
    subgraph Withdraw["💸 Withdraw"]
        W1["Convert XP<br/>to native tokens"]
        W2["Transfer to<br/>player wallet"]
    end
    
    D1 --> D2 --> B1 --> B2 --> R1
    R1 --> R2 & R3
    R2 & R3 --> W1 --> W2

    style Deposit fill:#10b981
    style Betting fill:#6366f1
    style Rewards fill:#f59e0b
    style Withdraw fill:#ef4444
```
